[package]
name = "bouncing-balls"
version = "0.1.0"
authors = ["Gabby Ortman"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.5"
wasm-bindgen = "0.2.28"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]